fix: add custom scrollbar styles

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -48,3 +48,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body,
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--ui-border-accented) transparent;
+}
